--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="share">应用分享</string>
     <string name="search">搜索</string>
     <string name="add_question">提问</string>
-    <string name="add_question_title">输入你的问题并以问号结尾~</string>
+    <string name="add_question_title">输入你的问题</string>
     <string name="add_question_description">输入问题的描述，可以更快获得解答喔</string>
     <string name="publish">发布</string>
     <string name="question_title_empty">问题不能为空</string>
@@ -71,4 +71,8 @@
     <string name="yesterday">昨天</string>
     <string name="hot_key">热搜</string>
     <string name="search_history">历史搜索</string>
+    <string name="like_success">点赞成功</string>
+    <string name="like_failed">点赞失败</string>
+    <string name="cancel_like_success">取消点赞成功</string>
+    <string name="cancel_like_failed">取消点赞失败</string>
 </resources>
