--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,5 @@
     <string name="like_failed">点赞失败</string>
     <string name="cancel_like_success">取消点赞成功</string>
     <string name="cancel_like_failed">取消点赞失败</string>
+    <string name="im_failed">聊天系统出了点问题~~~</string>
 </resources>
