测量模块修改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,7 +103,7 @@
     <string name="login_attention2">健康管家服务协议及隐私政策</string>
     <string name="name">健康管家</string>
     <string name="slogon">爱生活，爱健康</string>
-    <string name="weight_name">乐心体脂秤</string>
+    <string name="weight_name">乐心体脂秤S9</string>
     <string name="pair_ls">匹配</string>
     <string name="open_bluetooth_hint">Please turn on Bluetooth</string>
     <string name="no_device_hint">No devices</string>
